Finished Bakery and compressed images

--- a/Bakery/index.html
+++ b/Bakery/index.html
@@ -52,8 +52,8 @@
     <div class="container">
         <div class="art__icon"></div>
         <div class="art__right-side">
-            <h2 class="art__title">Art of cakes</h2>
-            <h3 class="art__subtitle">We create delicious memories</h3>
+            <h2 class="title">Art of cakes</h2>
+            <h3 class="subtitle">We create delicious memories</h3>
             <div class="art__description">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque debitis ex
                     laborum nobis provident quis ratione soluta ut. Amet, facere modi quibusdam quod soluta suscipit
@@ -85,11 +85,11 @@
         </div>
     </div>
 </section>
-<div class="menu">
+<section class="menu">
     <div class="container">
         <div class="food-widget">
             <div class="food-widget__cooking-time">
-                <div class="cooking-time__ready">Ready in</div>
+                <div class="cooking-time__title">Ready in</div>
                 <div class="cooking-time__time">40</div>
                 <div class="cooking-time__mins">mins</div>
             </div>
@@ -104,8 +104,8 @@
                 </ul>
             </div>
             <div class="food-widget__right-content">
-                <h2 class="food-widget__title">Tasty pancakes</h2>
-                <div class="food-widget__favourite">Season favourite</div>
+                <h2 class="title">Tasty pancakes</h2>
+                <div class="subtitle">Season favourite</div>
                 <div class="food-widget__description">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Aperiam architecto autem beatae cupiditate deserunt dolorem doloribus ea est eum in ipsa
@@ -119,8 +119,8 @@
             </div>
         </div>
     </div>
-</div>
-<div class="breakfast">
+</section>
+<section class="breakfast">
     <div class="container">
         <div class="breakfast__left">
             <h2 class="breakfast__title">Breakfast</h2>
@@ -163,6 +163,72 @@
             </div>
         </div>
     </div>
-</div>
+</section>
+<section class="sandwich">
+    <div class="container">
+        <div class="sandwich__left">
+            <ul class="sandwich__items">
+                <li class="item">
+                    <div class="item__img"><img src="assets/img/sandwich/img.png" alt=""></div>
+                    <div class="item__title">Class aptent</div>
+                    <div class="item__description">Quot alienum persecuti ut eam, nam ad atqui primis nusquam.</div>
+                </li>
+                <li class="item">
+                    <div class="item__img"><img src="assets/img/sandwich/img1.png" alt=""></div>
+                    <div class="item__title">Nulla eget</div>
+                    <div class="item__description">Nullam dictum felis eu pede mollis pretium Integer tincidunt.</div>
+                </li>
+                <li class="item">
+                    <div class="item__img"><img src="assets/img/sandwich/img2.png" alt=""></div>
+                    <div class="item__title">Sed nibh purus</div>
+                    <div class="item__description"> Aenean eleifend tellus leo ligula, porttitor eu, consequat vitae.
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="sandwich__right">
+            <header class="sandwich__header">
+                <h2 class="title">The Jibarito sandwich</h2>
+                <h3 class="subtitle">The best sandwich you`ve ever tasted!</h3>
+            </header>
+            <div class="sandwich__card">
+                <div class="card__img"><img src="assets/img/sandwich/mainImg.png" alt=""></div>
+                <ul class="card__items">
+                    <li class="food-widget__cooking-time food-widget__cooking-time_opacity">
+                        <div class="cooking-time__title">Prep</div>
+                        <div class="cooking-time__time">15</div>
+                        <div class="cooking-time__mins">mins</div>
+                    </li>
+                    <li class="food-widget__cooking-time food-widget__cooking-time_opacity">
+                        <div class="cooking-time__title">Cook</div>
+                        <div class="cooking-time__time">35</div>
+                        <div class="cooking-time__mins">mins</div>
+                    </li>
+                    <li class="food-widget__cooking-time">
+                        <div class="cooking-time__title">Ready in</div>
+                        <div class="cooking-time__time">50</div>
+                        <div class="cooking-time__mins">mins</div>
+                    </li>
+                </ul>
+                <div class="sandwich__recipe">Full recipe</div>
+            </div>
+        </div>
+    </div>
+</section>
+<footer class="footer">
+    <nav class="footer__nav">
+        <ul class="footer__left">
+            <li class="footer__item"><a href="">Our menu</a></li>
+            <li class="footer__item"><a href="">Gallery</a></li>
+            <li class="footer__item"><a href="">Culture</a></li>
+        </ul>
+        <span class="footer__middle"><a href="">Gustoso</a></span>
+        <ul class="footer__right">
+            <li class="footer__item"><a href="">Events</a></li>
+            <li class="footer__item"><a href="">Catering</a></li>
+            <li class="footer__item"><a href="">Visit us</a></li>
+        </ul>
+    </nav>
+</footer>
 </body>
 </html>
