Fixed issues with validation

--- a/pura.agency/index.html
+++ b/pura.agency/index.html
@@ -60,7 +60,7 @@ power packed yet easy to use.</p>
 <li class=list__item>
 <div class=item__background>01</div>
 <div class=item__number>01</div>
-<div class=item__title>Awesome design</div>
+<h3 class=item__title>Awesome design</h3>
 <div class=item__description>
 <p>Proin facilisis varius nunc. Curabitur eros risus, ultrices et dui ut,
 luctus accumsan nibh. Fusce convallis sapien placerat tellus suscipit
@@ -70,7 +70,7 @@ vechicula</p>
 <li class=list__item>
 <div class=item__background>02</div>
 <div class=item__number>02</div>
-<div class=item__title>New idea`s</div>
+<h3 class=item__title>New idea`s</h3>
 <div class=item__description>
 <p>Proin facilisis varius nunc. Curabitur eros risus, ultrices et dui ut,
 luctus accumsan nibh. Fusce convallis sapien placerat tellus suscipit
@@ -80,7 +80,7 @@ vechicula</p>
 <li class=list__item>
 <div class=item__background>03</div>
 <div class=item__number>03</div>
-<div class=item__title>Trending</div>
+<h3 class=item__title>Trending</h3>
 <div class=item__description>
 <p>Proin facilisis varius nunc. Curabitur eros risus, ultrices et dui ut,
 luctus accumsan nibh. Fusce convallis sapien placerat tellus suscipit
@@ -168,7 +168,7 @@ Donec sed quam at tortor aliquam rutrum sit amet tempus enim. Fusce
 consectrer Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 Alias debitis dicta harum libero maiores nemo non!</p>
 </div>
-<div class=solution__btn><a href class="btn btn_gradient">Discover us</a></div>
+<div class=solution__btn><a href=# class="btn btn_gradient">Discover us</a></div>
 </div>
 </section>
 <section class=possibilites>
