--- a/index.html
+++ b/index.html
@@ -1,98 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang=en>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Antsiferov Maxim</title>
-    <link href="//fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="assets/vendor/styles/animate.css">
-    <link rel="stylesheet" href="style/style.css">
+<meta charset=UTF-8>
+<meta name=viewport content="width=device-width, initial-scale=1">
+<title>Antsiferov Maxim</title>
+<link href="//fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900" rel=stylesheet type=text/css>
+<link rel=stylesheet href=assets/vendor/styles/animate.css>
+<link rel=stylesheet href=style/style.css>
 </head>
 <body>
-<header class="main-header">
-    <div class="container">
-        <a class="logo" href="#"><strong>A</strong>M</a>
-        <button class="sandwich-menu">
-                <span class="sandwich-container">
-                    <span class="sandwich-top"></span>
-                    <span class="sandwich-middle"></span>
-                    <span class="sandwich-bottom"></span>
-                </span>
-        </button>
-        <nav class="navigation">
-            <ul class="nav__list">
-                <li class="nav__item"><a href="#home">Home</a></li>
-                <li class="nav__item"><a href="#about">About</a></li>
-                <li class="nav__item"><a href="#portfolio">Portfolio</a></li>
-                <li class="nav__item"><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
+<header class=main-header>
+<div class=container>
+<a class=logo href=#><strong>A</strong>M</a>
+<button class=sandwich-menu>
+<span class=sandwich-container>
+<span class=sandwich-top></span>
+<span class=sandwich-middle></span>
+<span class=sandwich-bottom></span>
+</span>
+</button>
+<nav class=navigation>
+<ul class=nav__list>
+<li class=nav__item><a href=#home>Home</a></li>
+<li class=nav__item><a href=#about>About</a></li>
+<li class=nav__item><a href=#portfolio>Portfolio</a></li>
+<li class=nav__item><a href=#contact>Contact</a></li>
+</ul>
+</nav>
+</div>
 </header>
-<section id="home" class="banner tracked">
-    <div class="container">
-        <h1 class="banner__title">A multi-talented freelance web designer & front-end developer</h1>
-        <a class="down" href="#"></a>
-    </div>
+<section id=home class="banner tracked">
+<div class=container>
+<h1 class=banner__title>A multi-talented freelance web designer & front-end developer</h1>
+<a class=down href=#></a>
+</div>
 </section>
-<main id="about" class="about tracked">
-    <div class="container">
-        <h2 class="section__title">About</h2>
-        <p class="about__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Animi cumque dignissimos eius facere mollitia odio officia quis, vel! Iure, veniam!
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut impedit maxime nam officiis
-            porro provident, saepe veniam vitae! Rerum, voluptatem!</p>
-        <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
-            enim error qui sed. Aliquid asperiores blanditiis, cum, dolor doloribus in officiis
-            porro quod soluta velit vitae voluptatibus? Atque officiis vel voluptas! At eum
-            laudantium libero maxime mollitia possimus rem sed.</p>
-        <p class="about__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
-            enim error qui sed. Aliquid asperiores blanditiis, cum, dolor doloribus in officiis
-            porro quod soluta velit vitae voluptatibus? Atque officiis vel voluptas! At eum
-            laudantium libero maxime mollitia possimus rem sed.</p>
-        <a class="down" href="#"></a>
-    </div>
+<main id=about class="about tracked">
+<div class=container>
+<h2 class=section__title>About</h2>
+<p class=about__description>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+Animi cumque dignissimos eius facere mollitia odio officia quis, vel! Iure, veniam!
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut impedit maxime nam officiis
+porro provident, saepe veniam vitae! Rerum, voluptatem!</p>
+<p class=about__text>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
+enim error qui sed. Aliquid asperiores blanditiis, cum, dolor doloribus in officiis
+porro quod soluta velit vitae voluptatibus? Atque officiis vel voluptas! At eum
+laudantium libero maxime mollitia possimus rem sed.</p>
+<p class=about__text>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus
+enim error qui sed. Aliquid asperiores blanditiis, cum, dolor doloribus in officiis
+porro quod soluta velit vitae voluptatibus? Atque officiis vel voluptas! At eum
+laudantium libero maxime mollitia possimus rem sed.</p>
+<a class=down href=#></a>
+</div>
 </main>
-<section id="portfolio" class="portfolio tracked">
-    <div class="container">
-        <h2 class="section__title">Portfolio</h2>
-        <div class="portfolio__grid">
-            <div class="grid__item"><img src="assets/img/portfilio/bakery.jpg" alt=""></div>
-            <div class="grid__item"><img src="assets/img/portfilio/photobook.jpg" alt=""></div>
-            <div class="grid__item"><img src="assets/img/portfilio/pura.jpg" alt=""></div>
-            <div class="grid__item"><img src="assets/img/portfilio/hotdogs.jpg" alt=""></div>
-            <div class="grid__item"><img src="assets/img/portfilio/hotdogs.jpg" alt=""></div>
-        </div>
-    </div>
+<section id=portfolio class="portfolio tracked">
+<div class=container>
+<h2 class=section__title>Portfolio</h2>
+<div class=portfolio__grid>
+<div class=grid__item><img src=assets/img/portfilio/bakery.jpg alt></div>
+<div class=grid__item><img src=assets/img/portfilio/photobook.jpg alt></div>
+<div class=grid__item><img src=assets/img/portfilio/pura.jpg alt></div>
+<div class=grid__item><img src=assets/img/portfilio/hotdogs.jpg alt></div>
+</div>
+</div>
 </section>
-<section id="contact" class="contact tracked">
-    <div class="container">
-        <h3 class="section__title">Contact</h3>
-        <p class="section__description">Start your project today or Maybe you`re here just to say 'Hi'?</p>
-        <form action="" class="contact__form">
-            <input type="text" class="contact__name" title="Name" placeholder="Name*">
-            <input type="email" class="contact__email" title="Email" placeholder="Email*">
-            <textarea class="contact__message" placeholder="Message*"></textarea>
-            <input type="button" class="contact__button" value="Send now">
-        </form>
-    </div>
+<section id=contact class="contact tracked">
+<div class=container>
+<h3 class=section__title>Contact</h3>
+<p class=section__description>Start your project today or Maybe you`re here just to say 'Hi'?</p>
+<form action class=contact__form>
+<input type=text class=contact__name title=Name placeholder=Name*>
+<input type=email class=contact__email title=Email placeholder=Email*>
+<textarea class=contact__message placeholder=Message*></textarea>
+<input type=button class=contact__button value="Send now">
+</form>
+</div>
 </section>
-<footer class="footer">
-    <div class="container">
-        <div class="triangle"></div>
-        <div class="footer__socials">
-            <ul class="socials">
-                <li class="socials__item"><a href="https://github.com/AntsiferovMaxim"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-                <li class="socials__item animationDiagonalScroll"><a href=""><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-                <li class="socials__item animationTopScroll"><a href=""><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                <li class="socials__item animationRightScroll"><a href=""><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
-            </ul>
-        </div>
-        <div class="copyright">© 2017 AM. All Rights Reserved | Created by <a href="#">Antsiferov Maxim</a></div>
-    </div>
+<footer class=footer>
+<div class=container>
+<div class=triangle></div>
+<div class=footer__socials>
+<ul class=socials>
+<li class=socials__item><a href=https://github.com/AntsiferovMaxim><i class="fa fa-github" aria-hidden=true></i></a></li>
+<li class="socials__item animationDiagonalScroll"><a href><i class="fa fa-vk" aria-hidden=true></i></a></li>
+<li class="socials__item animationTopScroll"><a href><i class="fa fa-linkedin" aria-hidden=true></i></a></li>
+<li class="socials__item animationRightScroll"><a href><i class="fa fa-telegram" aria-hidden=true></i></a></li>
+</ul>
+</div>
+<div class=copyright>Â© 2017 AM. All Rights Reserved | Created by <a href=#>Antsiferov Maxim</a></div>
+</div>
 </footer>
-
-
-<script src="js/bundle.js"></script>
+<script src=js/bundle.js></script>
 </body>
 </html>
