--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
     <title>Antsiferov Maxim</title>
     <script>!function(e){"use strict";function t(e,t,n){e.addEventListener?e.addEventListener(t,n,!1):e.attachEvent&&e.attachEvent("on"+t,n)};function n(t,n){return e.localStorage&&localStorage[t+"_content"]&&localStorage[t+"_file"]===n};function a(t,a){if(e.localStorage&&e.XMLHttpRequest)n(t,a)?o(localStorage[t+"_content"]):l(t,a);else{var s=r.createElement("link");s.href=a,s.id=t,s.rel="stylesheet",s.type="text/css",r.getElementsByTagName("head")[0].appendChild(s),r.cookie=t}}function l(e,t){var n=new XMLHttpRequest;n.open("GET",t,!0),n.onreadystatechange=function(){4===n.readyState&&200===n.status&&(o(n.responseText),localStorage[e+"_content"]=n.responseText,localStorage[e+"_file"]=t)},n.send()}function o(e){var t=r.createElement("style");t.setAttribute("type","text/css"),r.getElementsByTagName("head")[0].appendChild(t),t.styleSheet?t.styleSheet.cssText=e:t.innerHTML=e}var r=e.document;e.loadCSS=function(e,t,n){var a,l=r.createElement("link");if(t)a=t;else{var o;o=r.querySelectorAll?r.querySelectorAll("style,link[rel=stylesheet],script"):(r.body||r.getElementsByTagName("head")[0]).childNodes,a=o[o.length-1]}var s=r.styleSheets;l.rel="stylesheet",l.href=e,l.media="only x",a.parentNode.insertBefore(l,t?a:a.nextSibling);var c=function(e){for(var t=l.href,n=s.length;n--;)if(s[n].href===t)return e();setTimeout(function(){c(e)})};return l.onloadcssdefined=c,c(function(){l.media=n||"all"}),l},e.loadLocalStorageCSS=function(l,o){n(l,o)||r.cookie.indexOf(l)>-1?a(l,o):t(e,"load",function(){a(l,o)})}}(this);</script>
     <style>a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;vertical-align:baseline;font-weight:inherit;box-sizing:border-box}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:""}table{border-collapse:collapse;border-spacing:0}a{color:inherit;text-decoration:none}button{background:none;border-style:none;cursor:pointer;box-shadow:none}
@@ -231,8 +231,8 @@
             <h3 class="section__title">Contact</h3>
             <p class="section__description">Start your project today or Maybe you`re here just to say 'Hi'?</p>
             <form action="https://formspree.io/antsiferovmaximv@gmail.com" method="POST" class="contact__form">
-                <input type="text"  class="contact__name" name="name" title="Name" placeholder="Name*">
-                <input type="email" name="email"  class="contact__email" title="Email" placeholder="Email*">
+                <input type="text" class="contact__name" name="name" title="Name" placeholder="Name*">
+                <input type="email" name="email" class="contact__email" title="Email" placeholder="Email*">
                 <textarea class="contact__message" name="message" placeholder="Message*"></textarea>
                 <input type="submit" class="contact__button" value="Send now">
             </form>
@@ -263,9 +263,7 @@
                         <i class="fa fa-linkedin" aria-hidden="true"></i>
                     </a>
                 </li>
-                <li class="socials__item animationRightScroll"><a href="https://telegram.me/AntsiferovMaxim" target="_blank"><i
-                        class="fa fa-telegram"
-                        aria-hidden="true"></i></a></li>
+                <li class="socials__item animationRightScroll"><a href="https://telegram.me/AntsiferovMaxim" target="_blank"><i class="fa fa-telegram" aria-hidden="true"></i></a></li>
             </ul>
         </div>
         <div class="copyright">© 2017 AM. All Rights Reserved | Created by <a href="#">Antsiferov Maxim</a></div>
