--- a/pakhi/index.html
+++ b/pakhi/index.html
@@ -175,7 +175,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     });
 </script>
 
-<div class="container">
+<div class="container cnt">
     <div class="recommand-section">
         <div class="recommand-section-grids">
 
