--- a/pakhi/index.html
+++ b/pakhi/index.html
@@ -35,7 +35,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </head>
 <body>
 <!-- header-section-starts -->
-<header class="header">
+<header class="header" id="home">
     <div class="container">
         <a class="header__logo" href="index.html"><img src="images/logo.png" alt="logo"></a>
         <nav class="navigation">
@@ -175,7 +175,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     });
 </script>
 
-<div class="container cnt">
+<div class="container main-content">
     <div class="recommand-section">
         <div class="recommand-section-grids">
 
