--- a/pakhi/cart.html
+++ b/pakhi/cart.html
@@ -7,76 +7,83 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Pakhi an E-Commerce online Shopping Category Flat Bootstarp responsive Website Template| Cart :: w3layouts</title>
-<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery.min.js"></script>
-<!-- Custom Theme files -->
-<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-<!-- Custom Theme files -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Pakhi Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
-<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<!--webfont-->
-<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-<!-- dropdown -->
-<script src="js/jquery.easydropdown.js"></script>
-<link href="css/nav.css" rel="stylesheet" type="text/css" media="all"/>
-<script type="text/javascript" src="js/hover_pack.js"></script>
-		  <script type="text/javascript">
-		jQuery(document).ready(function($) {
-			$(".scroll").click(function(event){		
-				event.preventDefault();
-				$('html,body').animate({scrollTop:$(this.hash).offset().top},1200);
-			});
-		});
-	</script>
+    <title>Pakhi an E-Commerce online Shopping Category Flat Bootstarp responsive Website Template| Cart ::
+        w3layouts</title>
+    <link href="css/bootstrap.css" rel='stylesheet' type='text/css'/>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="js/jquery.min.js"></script>
+    <!-- Custom Theme files -->
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="all"/>
+    <!-- Custom Theme files -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="keywords" content="Pakhi Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design"/>
+    <script type="application/x-javascript"> addEventListener("load", function () {
+        setTimeout(hideURLbar, 0);
+    }, false);
+    function hideURLbar() {
+        window.scrollTo(0, 1);
+    } </script>
+    <!--webfont-->
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic'
+          rel='stylesheet' type='text/css'>
+    <!-- dropdown -->
+    <script src="js/jquery.easydropdown.js"></script>
+    <link href="css/nav.css" rel="stylesheet" type="text/css" media="all"/>
+    <script type="text/javascript" src="js/hover_pack.js"></script>
+    <script type="text/javascript">
+        jQuery(document).ready(function ($) {
+            $(".scroll").click(function (event) {
+                event.preventDefault();
+                $('html,body').animate({scrollTop: $(this.hash).offset().top}, 1200);
+            });
+        });
+    </script>
 </head>
 <body>
-	<!-- header-section-starts -->
-	<header class="header">
-		<div class="container">
-			<a class="header__logo" href="index.html"><img src="images/logo.png" alt="logo"></a>
-			<nav class="navigation">
-				<div class="navigation__content">
-					<label class="mobile_menu" for="mobile_menu">
-						<span>Menu</span>
-					</label>
-					<input id="mobile_menu" type="checkbox">
-					<ul class="nav">
-						<li class="active"><a href="index.html">Home</a></li>
-						<li class="dropdown1"><a href="#">Dresses</a>
-							<ul class="dropdown2">
-								<li><a href="products.html">Dress Materials</a></li>
-								<li><a href="products.html">Kurta & Kurti</a></li>
-								<li><a href="products.html">Sarees</a></li>
-								<li><a href="products.html">Chudidars</a></li>
-							</ul>
-						</li>
-						<li class="dropdown1"><a href="#">Bags</a>
-							<ul class="dropdown2">
-								<li><a href="products.html">Latest</a></li>
-								<li><a href="products.html">Leather Bags</a></li>
-								<li><a href="products.html">Hand Bags</a></li>
-							</ul>
-						</li>
-						<li class="dropdown1"><a href="#">Shoes</a>
-							<ul class="dropdown2">
-								<li><a href="products.html">Sports Shoes</a></li>
-								<li><a href="products.html">Casual Shoes</a></li>
-								<li><a href="products.html">Formal Shoes</a></li>
-							</ul>
-						</li>
-						<li><a href="contact.html">Contact US</a></li>
-						<div class="clearfix"></div>
-					</ul>
-				</div>
-			</nav>
-			<ul class="header__control-btn">
-				<li class="btn"><a href="" class="header__basket">
-					<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<!-- header-section-starts -->
+<header id="home" class="header">
+    <div class="container">
+        <a class="header__logo" href="index.html"><img src="images/logo.png" alt="logo"></a>
+        <nav class="navigation">
+            <div class="navigation__content">
+                <label class="mobile_menu" for="mobile_menu">
+                    <span>Menu</span>
+                </label>
+                <input id="mobile_menu" type="checkbox">
+                <ul class="nav">
+                    <li class="active"><a href="index.html">Home</a></li>
+                    <li class="dropdown1"><a href="#">Dresses</a>
+                        <ul class="dropdown2">
+                            <li><a href="products.html">Dress Materials</a></li>
+                            <li><a href="products.html">Kurta & Kurti</a></li>
+                            <li><a href="products.html">Sarees</a></li>
+                            <li><a href="products.html">Chudidars</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown1"><a href="#">Bags</a>
+                        <ul class="dropdown2">
+                            <li><a href="products.html">Latest</a></li>
+                            <li><a href="products.html">Leather Bags</a></li>
+                            <li><a href="products.html">Hand Bags</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown1"><a href="#">Shoes</a>
+                        <ul class="dropdown2">
+                            <li><a href="products.html">Sports Shoes</a></li>
+                            <li><a href="products.html">Casual Shoes</a></li>
+                            <li><a href="products.html">Formal Shoes</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="contact.html">Contact US</a></li>
+                    <div class="clearfix"></div>
+                </ul>
+            </div>
+        </nav>
+        <ul class="header__control-btn">
+            <li class="btn"><a href="" class="header__basket">
+                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 486.569 486.569" style="enable-background:new 0 0 486.569 486.569;" xml:space="preserve">
 <g>
 	<path id="basket-svg" d="M146.069,320.369h268.1c30.4,0,55.2-24.8,55.2-55.2v-112.8c0-0.1,0-0.3,0-0.4c0-0.3,0-0.5,0-0.8c0-0.2,0-0.4-0.1-0.6
@@ -98,9 +105,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		c-15.6,0-28.2-12.7-28.2-28.2v-66.5v-74.4v-5l324.5,44.7v101.1C442.369,280.769,429.669,293.369,414.169,293.369z"/>
 </g>
 </svg>
-				</a></li>
-				<li class="btn"><a href="" class="header__search">
-					<svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            </a></li>
+            <li class="btn"><a href="" class="header__search">
+                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 451 451" style="enable-background:new 0 0 451 451;" xml:space="preserve">
 <g>
 	<path id="search-svg"  d="M447.05,428l-109.6-109.6c29.4-33.8,47.2-77.9,47.2-126.1C384.65,86.2,298.35,0,192.35,0C86.25,0,0.05,86.3,0.05,192.3
@@ -109,64 +116,65 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		s-74.1,165.4-165.3,165.4C101.15,357.7,26.95,283.5,26.95,192.3z"/>
 </g>
 </svg>
-				</a></li>
-			</ul>
-		</div>
-	</header>
-	<div class="container">
-		<div class="prom-ua">
-			<a class="prom__icon"><img src="images/prom-icon.png" alt="prom"></a>
-			<a class="prom__reviews"><img src="images/prom-reviews.png" alt="prom reviews"></a>
-		</div>
-	</div>
-		<!-- start Contact-page -->
-	<!-- content-section-starts -->
-	<div class="container">
-<div class="dreamcrub">
-			   	 <ul class="breadcrumbs">
-				 
-                    <li class="home">
-                       <a href="index.html" title="Go to Home Page"><img src="images/home.png" alt=""/></a>&nbsp;
-                       <span>&gt;</span>
-                    </li>
-                    <li>
-                       Cart(0)
-                    </li>
-                </ul>
-                <ul class="previous">
-                	<li><a href="index.html">Back to Previous Page</a></li>
-                </ul>
-                <div class="clearfix"></div>
-			   </div>
-			   </div>
+            </a></li>
+        </ul>
+    </div>
+</header>
+<div class="container">
+    <div class="prom-ua">
+        <a class="prom__icon"><img src="images/prom-icon.png" alt="prom"></a>
+        <a class="prom__reviews"><img src="images/prom-reviews.png" alt="prom reviews"></a>
+    </div>
+</div>
+<!-- start Contact-page -->
+<!-- content-section-starts -->
+<div class="container">
+    <div class="dreamcrub">
+        <ul class="breadcrumbs">
 
-<div class="container"><div class="coats sing-c text-center">
-			<h3 class="c-head">Your Shopping Cart(0)</h3>
-			<p>Lorem ipsum dolor sit amet enim. Etiam ullamcorp uspendisse a pellentesque.</p>
-			<p> Etiam ullamcorp uspendisse a pellentesque.Lorem ipsum dolor sit amet enim.</p>
-			<p>Your Bascket Is Empty Please Go <a href="products.html">here</a> And Shop</p>
-		</div>
+            <li class="home">
+                <a href="index.html" title="Go to Home Page"><img src="images/home.png" alt=""/></a>&nbsp;
+                <span>&gt;</span>
+            </li>
+            <li>
+                Cart(0)
+            </li>
+        </ul>
+        <ul class="previous">
+            <li><a href="index.html">Back to Previous Page</a></li>
+        </ul>
+        <div class="clearfix"></div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="coats sing-c text-center">
+        <h3 class="c-head">Your Shopping Cart(0)</h3>
+        <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorp uspendisse a pellentesque.</p>
+        <p> Etiam ullamcorp uspendisse a pellentesque.Lorem ipsum dolor sit amet enim.</p>
+        <p>Your Bascket Is Empty Please Go <a href="products.html">here</a> And Shop</p>
+    </div>
 
 </div>
 
-	<!-- content-section-ends -->
+<!-- content-section-ends -->
 
-		<div class="footer">
-		<div class="up-arrow">
-			<a class="scroll" href="#home"><img src="images/up.png" alt="" /></a>
-		</div>
-			<div class="container">
-				<div class="copyrights">
-					<p>Copyright &copy; 2015 All rights reserved | Template by  <a href="http://w3layouts.com">  W3layouts</a></p>
-				</div>
-				<div class="footer-social-icons">
-					<a href="#"><i class="fb"></i></a>
-					<a href="#"><i class="tw"></i></a>
-					<a href="#"><i class="in"></i></a>
-					<a href="#"><i class="pt"></i></a>
-				</div>
-				  <div class="clearfix"></div>
-			</div>
-		</div>
+<div class="footer">
+    <div class="up-arrow">
+        <a class="scroll" href="#home"><img src="images/up.png" alt=""/></a>
+    </div>
+    <div class="container">
+        <div class="copyrights">
+            <p>Copyright &copy; 2015 All rights reserved | Template by <a href="http://w3layouts.com"> W3layouts</a></p>
+        </div>
+        <div class="footer-social-icons">
+            <a href="#"><i class="fb"></i></a>
+            <a href="#"><i class="tw"></i></a>
+            <a href="#"><i class="in"></i></a>
+            <a href="#"><i class="pt"></i></a>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+</div>
 </body>
 </html>
