--- a/pakhi/products.html
+++ b/pakhi/products.html
@@ -38,7 +38,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </head>
 <body>
 <!-- header-section-starts -->
-<header class="header">
+<header id="home" class="header">
     <div class="container">
         <a class="header__logo" href="index.html"><img src="images/logo.png" alt="logo"></a>
         <nav class="navigation">
