--- a/pakhi/single.html
+++ b/pakhi/single.html
@@ -63,7 +63,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </head>
 <body>
 <!-- header-section-starts -->
-<header class="header">
+<header id="home" class="header">
     <div class="container">
         <a class="header__logo" href="index.html"><img src="images/logo.png" alt="logo"></a>
         <nav class="navigation">
@@ -159,8 +159,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <li>
                 Sales
             </li>&nbsp;
-            <span>&gt;</span>
-            <li>products</a></li>
+            <li>&gt;</li>
+            <li><a href="products.html">products</a></li>
         </ul>
         <ul class="previous">
             <li><a href="index.html">Back to Previous Page</a></li>
@@ -287,22 +287,21 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <ul id="etalage">
                             <li>
                                 <a href="optionallink.html">
-                                    <img class="etalage_thumb_image" src="images/d1.jpg" class="img-responsive"/>
-                                    <img class="etalage_source_image" src="images/d1.jpg" class="img-responsive"
-                                         title=""/>
+                                    <img class="etalage_thumb_image img-responsive" src="images/d1.jpg" alt="img"/>
+                                    <img class="etalage_source_image img-responsive" src="images/d1.jpg" alt="img"/>
                                 </a>
                             </li>
                             <li>
-                                <img class="etalage_thumb_image" src="images/d2.jpg" class="img-responsive"/>
-                                <img class="etalage_source_image" src="images/d2.jpg" class="img-responsive" title=""/>
+                                <img class="etalage_thumb_image img-responsive" src="images/d2.jpg" alt="img"/>
+                                <img class="etalage_source_image img-responsive" src="images/d2.jpg" alt="img"/>
                             </li>
                             <li>
-                                <img class="etalage_thumb_image" src="images/d3.jpg" class="img-responsive"/>
-                                <img class="etalage_source_image" src="images/d3.jpg" class="img-responsive"/>
+                                <img class="etalage_thumb_image img-responsive" src="images/d3.jpg" alt="img"/>
+                                <img class="etalage_source_image img-responsive" src="images/d3.jpg" alt="img"/>
                             </li>
                             <li>
-                                <img class="etalage_thumb_image" src="images/d4.jpg" class="img-responsive"/>
-                                <img class="etalage_source_image" src="images/d4.jpg" class="img-responsive"/>
+                                <img class="etalage_thumb_image img-responsive" src="images/d4.jpg" alt="img"/>
+                                <img class="etalage_source_image img-responsive" src="images/d4.jpg" alt="img"/>
                             </li>
                         </ul>
                         <div class="clearfix"></div>
