--- a/todo/index.html
+++ b/todo/index.html
@@ -15,7 +15,7 @@
         <h1 class="header__title">Todo</h1>
     </header>
     <form id="add-todo">
-        <input type="text" id="add-todo__input">
+        <textarea id="add-todo__input"></textarea>
         <button id="add-todo__button" type="submit">Add</button>
     </form>
     <ul id="todo__list">
