--- a/website/index.html
+++ b/website/index.html
@@ -39,14 +39,14 @@
                 <li class="nav__item"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <a href="" class="btn header__btn callback-btn">Начать проект</a>
+        <a href="" class="btn header__btn callback-btn">Order a project</a>
     </div>
 </header>
 <main>
     <section id="home" class="banner tracked">
         <div class="container">
             <h1 class="banner__title">A multi-talented freelance web designer & front-end developer</h1>
-            <a href="" class="btn banner__btn callback-btn">Заказать верстку</a>
+            <a href="" class="btn banner__btn callback-btn">Order a project</a>
             <a class="down" href="#">
                 <i class="fa fa-angle-down" aria-hidden="true"></i>
             </a>
