--- a/website/index.html
+++ b/website/index.html
@@ -96,7 +96,7 @@
                                 molestias nobis quasi quis, reiciendis sit vel! Autem ex illum mollitia neque, odio, porro
                                 provident quasi repellat saepe, unde vel voluptates.</p>
                             <div class="popup__link"><span>Ссылка на сайт:</span><a href="https://antsiferovmaxim.github.io/Photobook">https://antsiferovmaxim.github.io/Photobook</a></div>
-                            <div class="screenshot"><img src="" alt="item"></div>
+                            <div class="screenshot"><img src="/" alt="item"></div>
                         </div>
                     </div>
                     <div class="item__title">
@@ -126,7 +126,7 @@
                                 molestias nobis quasi quis, reiciendis sit vel! Autem ex illum mollitia neque, odio, porro
                                 provident quasi repellat saepe, unde vel voluptates.</p>
                             <div class="popup__link"><span>Ссылка на сайт:</span><a href="https://antsiferovmaxim.github.io/Photobook">https://antsiferovmaxim.github.io/Photobook</a></div>
-                            <div class="screenshot"><img src="" alt="item2"></div>
+                            <div class="screenshot"><img src="/" alt="item2"></div>
                         </div>
                     </div>
                     <div class="item__title">
@@ -186,7 +186,7 @@
                                 molestias nobis quasi quis, reiciendis sit vel! Autem ex illum mollitia neque, odio, porro
                                 provident quasi repellat saepe, unde vel voluptates.</p>
                             <div class="popup__link"><span>Ссылка на сайт:</span><a href="https://antsiferovmaxim.github.io/Photobook">https://antsiferovmaxim.github.io/Photobook</a></div>
-                            <div class="screenshot"><img src="" alt="item4"></div>
+                            <div class="screenshot"><img src="/" alt="item4"></div>
                         </div>
                     </div>
                     <div class="item__title">
