--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="header-content">
                     <div class="logo">
                         <a href="/">
-                            <img src="img/Logo.svg" alt="">
+                            <img src="/img/Logo.svg" alt="">
                         </a>
                     </div>
                     <ul class="menu">
@@ -50,12 +50,12 @@
                     </ul>
 
                     <ul class="secondary-menu">
-                        <li><a href="https://facebook.com"><img src="img/facebook.svg" alt=""></a></li>
-                        <li><a href="https://instagram.com"><img src="img/instagram.svg" alt=""></a></li>
+                        <li><a href="https://facebook.com"><img src="/img/facebook.svg" alt=""></a></li>
+                        <li><a href="https://instagram.com"><img src="/img/instagram.svg" alt=""></a></li>
                     </ul>
                     
                     <!--<div class="mobile">
-                        <button><img src="img/burger-icon.svg" alt=""></button>
+                        <button><img src="/img/burger-icon.svg" alt=""></button>
                     </div>-->
                 </div>
             </div>
@@ -66,11 +66,11 @@
         <div class="carousel-container">
 
             <div id="main-carousel-container">
-                <div><img src="img/city.jpg" alt=""></div>
-                <!--<div><img src="img/city2.jpg" alt=""></div>-->
-                <!--<div><img src="img/gpu.jpg" alt=""></div>-->
-                <!--<div><img src="img/famr.jpg" alt=""></div>-->
-                <!--<div><img src="img/mining.jpg" alt=""></div>-->
+                <div><img src="/img/city.jpg" alt=""></div>
+                <!--<div><img src="/img/city2.jpg" alt=""></div>-->
+                <!--<div><img src="/img/gpu.jpg" alt=""></div>-->
+                <!--<div><img src="/img/famr.jpg" alt=""></div>-->
+                <!--<div><img src="/img/mining.jpg" alt=""></div>-->
             </div>
 
             <div class="courses-wrapper">
@@ -78,28 +78,28 @@
                     <div class="courses-container">
                         <div class="courses-block">
                             <div class="courses-item rmb">
-                                <img src="img/yuan.svg" alt="">
+                                <img src="/img/yuan.svg" alt="">
                                 <div class="courses-data">
                                     <span class="name">RMB</span>
                                     <span class="value">0</span>
                                 </div>
                             </div>
                             <div class="courses-item hkd">
-                                <img src="img/hkd.svg" alt="">
+                                <img src="/img/hkd.svg" alt="">
                                 <div class="courses-data">
                                     <span class="name">HKD</span>
                                     <span class="value">0</span>
                                 </div>
                             </div>
                             <div class="courses-item rub">
-                                <img src="img/rub.svg" alt="">
+                                <img src="/img/rub.svg" alt="">
                                 <div class="courses-data">
                                     <span class="name">RUB</span>
                                     <span class="value">0</span>
                                 </div>
                             </div>
                             <div class="courses-item uah">
-                                <img src="img/hrv.svg" alt="">
+                                <img src="/img/hrv.svg" alt="">
                                 <div class="courses-data">
                                     <span class="name">UAH</span>
                                     <span class="value">0</span>
@@ -111,28 +111,28 @@
 
                         <div class="courses-block">
                             <div class="courses-item btc">
-                                <img src="img/btc.svg" alt="">
+                                <img src="/img/btc.svg" alt="">
                                 <div class="courses-data">
                                     <span class="name">BTC</span>
                                     <span class="value">0</span>
                                 </div>
                             </div>
                             <div class="courses-item bch">
-                                <img src="img/bch.svg" alt="">
+                                <img src="/img/bch.svg" alt="">
                                 <div class="courses-data">
                                     <span class="name">BCH</span>
                                     <span class="value">0</span>
                                 </div>
                             </div>
                             <div class="courses-item eth">
-                                <img src="img/eth.svg" alt="">
+                                <img src="/img/eth.svg" alt="">
                                 <div class="courses-data">
                                     <span class="name">ETH</span>
                                     <span class="value">0</span>
                                 </div>
                             </div>
                             <div class="courses-item xrp">
-                                <img src="img/xrp.svg" alt="">
+                                <img src="/img/xrp.svg" alt="">
                                 <div class="courses-data">
                                     <span class="name">XRP</span>
                                     <span class="value">0</span>
@@ -161,7 +161,7 @@
                             сопровождения сделок клиентов.</p>
                     </div>
                     <div class="hero-illustration">
-                        <img src="img/team.svg" alt="">
+                        <img src="/img/team.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -173,7 +173,7 @@
             <div class="container">
                 <div class="services-container">
                     <div class="services-illustration">
-                        <img src="img/services.svg" alt="">
+                        <img src="/img/services.svg" alt="">
                     </div>
                     <div class="services-data">
                         <h2>Мы предоставляем полный
@@ -203,39 +203,39 @@
                         <div>
                             <a href="https://bitmain.com" target="_blank">
                                 <img
-                                        srcset="img/logos/bitmain.png 1x, img/logos/bitmain@2x.png 2x, img/logos/bitmain@3x.png 3x"
+                                        srcset="/img/logos/bitmain.png 1x, /img/logos/bitmain@2x.png 2x, /img/logos/bitmain@3x.png 3x"
                                         alt="">
                             </a>
                         </div>
                         <div>
                             <a href="https://www.turkishairlines.com" target="_blank">
                                 <img
-                                        srcset="img/logos/turkish.png 1x, img/logos/turkish@2x.png 2x, img/logos/turkish@3x.png 3x"
+                                        srcset="/img/logos/turkish.png 1x, /img/logos/turkish@2x.png 2x, /img/logos/turkish@3x.png 3x"
                                         alt="">
                             </a>
                         </div>
                         <div>
                             <a href="https://www.hsbc.com" target="_blank">
-                                <img srcset="img/logos/hsbc.png 1x, img/logos/hsbc@2x.png 2x, img/logos/hsbc@3x.png 3x"
+                                <img srcset="/img/logos/hsbc.png 1x, /img/logos/hsbc@2x.png 2x, /img/logos/hsbc@3x.png 3x"
                                      alt="">
                             </a>
                         </div>
                         <div>
                             <a href="https://www.apple.com" target="_blank">
-                                <img srcset="img/logos/apple.png 1x, img/logos/apple@2x.png 2x, img/logos/apple@3x.png 3x"
+                                <img srcset="/img/logos/apple.png 1x, /img/logos/apple@2x.png 2x, /img/logos/apple@3x.png 3x"
                                      alt="">
                             </a>
                         </div>
                         <div>
                             <a href="https://skay.ua" target="_blank">
                                 <img
-                                        srcset="img/logos/skay.ua.png 1x, img/logos/skay.ua@2x.png 2x, img/logos/skay.ua@3x.png 3x"
+                                        srcset="/img/logos/skay.ua.png 1x, /img/logos/skay.ua@2x.png 2x, /img/logos/skay.ua@3x.png 3x"
                                         alt="">
                             </a>
                         </div>
                         <div>
                             <img
-                                    srcset="img/logos/litecoin.png 1x, img/logos/litecoin@2x.png 2x, img/logos/litecoin@3x.png 3x"
+                                    srcset="/img/logos/litecoin.png 1x, /img/logos/litecoin@2x.png 2x, /img/logos/litecoin@3x.png 3x"
                                     alt="">
                         </div>
                     </div>
@@ -258,7 +258,7 @@
             <div class="city shenzhen">
                 <div class="city-tooltip">Шэньчжэнь</div>
             </div>
-            <img src="img/map.svg" alt="">
+            <img src="/img/map.svg" alt="">
         </div>
 
         <div class="container">
@@ -333,7 +333,7 @@
                     <div class="form-group large button">
                         <button>
                             <span>Отправить</span>
-                            <img src="img/loading.gif" alt="">
+                            <img src="/img/loading.gif" alt="">
                         </button>
                     </div>
                 </form>
@@ -344,7 +344,7 @@
         <div class="request-popup-overlay hidden" id="request-popup-overlay">
             <div class="request-popup-wrapper">
                 <div class="request-popup-container">
-                    <img src="img/checkmark-green.png" alt="">
+                    <img src="/img/checkmark-green.png" alt="">
 
                     <span>Заказ принят и поступил в обработку!</span>
                     <p>Мы свяжемся с вами в близжайшкее время.</p>
@@ -360,7 +360,7 @@
                 <div class="logo-data">
                     <div class="logo">
                         <a href="/">
-                            <img src="img/Logo.svg" alt="">
+                            <img src="/img/Logo.svg" alt="">
                         </a>
                     </div>
                 </div>
@@ -461,15 +461,15 @@
             <div class="footer-bottom">
                 <span class="copy">	&copy; 2018 Copy Rights, Soilios</span>
                 <ul class="secondary-menu">
-                    <li><a href="https://facebook.com"><img src="img/facebook.svg" alt=""></a></li>
-                    <li><a href="https://instagram.com"><img src="img/instagram.svg" alt=""></a></li>
+                    <li><a href="https://facebook.com"><img src="/img/facebook.svg" alt=""></a></li>
+                    <li><a href="https://instagram.com"><img src="/img/instagram.svg" alt=""></a></li>
                 </ul>
             </div>
         </div>
 
     </div>
 
-    <button class="scroll-btn"><img src="img/left-arrow.svg" alt=""></button>
+    <button class="scroll-btn"><img src="/img/left-arrow.svg" alt=""></button>
 </div>
 
 <script src="js/bundle.js"></script>
